<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/cost_of_service"
        android:inputType="numberDecimal"
        android:hint="@string/cost_of_service" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/cost_of_service"
       app:layout_constraintStart_toStartOf="parent"
       android:id="@+id/service_prompt"
       android:text="@string/how_was_the_service" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/service_prompt"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tip_options"
        android:checkedButton="@id/twenty_percent">

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/service_prompt"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/twenty_percent"
            android:text="@string/amazing_20"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_cosntraintTop_toBottomOf="@id/twenty_percent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/eightteen_percent"
            android:text="@string/good_18"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/eightteen_percent"
            app:layout_constrintStart_toStartOf="parent"
            android:id="@+id/fifteen_percent"
            android:text="@string/okay_15"
            />
    </RadioGroup>

    <Switch
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tip_options"
        android:id="@+id/round_switch"
        android:text="@string/round_up_tip"
        android:checked="true"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@id/round_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/calculate_button"
        android:text="@string/calculate"

        />
</androidx.constraintlayout.widget.ConstraintLayout>